<resources>
    <string name="app_name">Zarqa</string>

    <!-- Auth Proccess -->
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="logout">Keluar</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="phone">Nomor Telepon</string>
    <string name="role">Pilih Role Anda</string>
    <string-array name="role_array">
        <item>Admin</item>
        <item>Dropshipper</item>
        <item>Pekerja Gudang</item>
    </string-array>
    <string name="role_admin">Admin</string>
    <string name="role_dropshipper">Dropshipper</string>
    <string name="role_gudang">Pekerja Gudang</string>
    <string name="login_title">Masuk ke Akun Anda</string>
    <string name="login_content">Masukkan Email &amp; Password dengan benar, perhatikan huruf kapital</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="invalid_password">Password tidak valid, harus melebihi 5 karakter</string>
    <string name="login_failed">"Login Gagal"</string>
    <string name="login_success">"Login Berhasil"</string>
    <string name="create_new_account">Daftar Akun Baru!</string>
    <string name="already_have_account">Sudah Mempunyai Akun?</string>
    <string name="register_title">Daftar Akun Baru</string>
    <string name="register_content">Nama lengkap, Nomor Telepon, E-mail dan Password harus terisi</string>
    <string name="register_failed">"Pendaftaran Gagal"</string>
    <string name="register_success">"Pendaftaran Berhasil"</string>


    <!-- Worker Home -->
    <string name="worker_home_title_dashboard">Dashboard</string>
    <string name="worker_dashboard_total_stock">Jumlah Barang</string>
    <string name="worker_dashboard_total_value">Value Barang</string>
    <string name="worker_dashboard_stock_in_a_day">Stok Masuk Hari Ini</string>
    <string name="worker_dashboard_stock_out_a_day">Stok Keluar Hari Ini</string>
    <string name="worker_dahsboard_stock_in">In</string>
    <string name="worker_dahsboard_stock_out">Out</string>
    <string name="worker_warehouse_title_warehouse">Gudang</string>
    <string name="worker_warehouse_btn_add_product">Tambah\nProduk</string>
    <string name="worker_warehouse_btn_get_product">Ambil\nProduk</string>
    <string name="worker_warehouse_btn_restock_product">Restock\nProduk</string>
    <string name="worker_warehouse_tab_layout_title1">Semua Produk</string>
    <string name="worker_warehouse_tab_layout_title2">Stok Rendah</string>
    <string name="worker_warehouse_tab_layout_title3">Hapus Produk</string>

    <!-- Worker code.monkeys.zarqa.data.source.remote.request.product.Product -->
    <string name="worker_product_add_product_title">Tambah Produk</string>
    <string name="worker_product_add_product_image_title">Gambar Produk</string>
    <string name="worker_product_add_product_information_title">Informasi Produk</string>

    <string name="worker_product_take_product_title">Ambil Produk</string>


    <!-- Search code.monkeys.zarqa.data.source.remote.request.product.Product -->
    <string name="search_product_hint">Cari produk disini</string>

    <!--  List Color  -->
    <string name="warna_baju_putih">PUTIH</string>
    <string name="warna_baju_hitam">HITAM</string>
    <string name="warna_baju_dusty">DUSTY</string>
    <string name="warna_baju_army">ARMY</string>
    <string name="warna_baju_mocca">MOCCA</string>

    <string name="warna_baju_hijau_botol">HIJAU BOTOL</string>
    <string name="warna_baju_milo">MILO</string>
    <string name="warna_baju_abu_muda">ABU MUDA</string>
    <string name="warna_baju_navy">NAVY</string>

    <string name="warna_baju_hitam_milo">HITAM MILO</string>
    <string name="warna_baju_milo_hitam">MILO HITAM</string>
    <string name="warna_baju_hitam_lavender">HITAM LAVENDER</string>
    <string name="warna_baju_lavender_hitam">LAVENDER HITAM</string>
    <string name="warna_baju_hitam_mint">HITAM MINT</string>

    <string name="warna_baju_mint_hitam">MINT HITAM</string>
    <string name="warna_baju_hitam_putih">HITAM PUTIH</string>
    <string name="warna_baju_sage">SAGE</string>
    <string name="warna_baju_teracota">TERACOTA</string>

    <string name="warna_baju_lavender">LAVENDER</string>
    <string name="warna_baju_emerald">EMERALD</string>
    <string name="warna_baju_putih_bw">PUTIH BW</string>
    <string name="warna_baju_cream">CREAM</string>
    <string name="warna_baju_denim">DENIM</string>

    <string name="warna_baju_abu_tua">ABU TUA</string>
    <string name="warna_baju_pink_baby">PINK BABY</string>
    <string name="warna_baju_coktan">COKTAN</string>
    <string name="warna_baju_coksu">COKSU</string>
    <string name="warna_baju_royal_blue">ROYAL BLUE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>