<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zarqa"
        android:textColor="@color/white"
        android:fontFamily="@font/gilroy_bold"
        android:textSize="52sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/login_title"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/grey"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/login_content"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_role"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/role"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            tools:ignore="TextFields">

            <AutoCompleteTextView
                android:id="@+id/edt_level_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            app:cornerRadius="16dp" />


        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:fontFamily="@font/gilroy_mediumitalic"
                android:maxLines="1"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:fontFamily="@font/gilroy_bold"
                android:maxLines="1"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


