<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.worker.warehouse.product.add.AddProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.worker.warehouse.product.add.AddProductActivity">

        <!--  Title and Back Button  -->
        <LinearLayout
            android:id="@+id/linear_layout_dashboard_and_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/guideline_top">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/worker_product_add_product_title"
                android:textAlignment="textEnd"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="@+id/guideline_top"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/iv_product_image_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title"
            app:strokeColor="#BCBCBC">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_medium"
                    android:padding="16dp"
                    android:text="@string/worker_product_add_product_image_title"
                    android:textSize="18sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#BCBCBC" />

                <ImageView
                    android:id="@+id/iv_product_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:src="@drawable/abaya_hijau" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/layout_button_camera_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_product_image_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="Upload"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/white"
                android:text="Kamera"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_camera"
                app:iconTint="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/layout_button_camera_gallery">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro_medium"
                android:text="@string/worker_product_add_product_information_title"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Nama Produk" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Warna" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_product_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Ukuran" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

